# Project_CI-CD

./: CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator.hpp  main.cpp
.github/workflows/: cmake-build-test.yml
